Tue Aug 30 11:59:14 CDT 2005  William Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/IRDD_Handler.h
	* DAnCE/Config_Handlers/PCD_Handler.h
	
	Fixed a class/struct mismatch.

Tue Aug 30 11:51:32 CDT 2005  William Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/CIAOServerResources.cpp
	* DAnCE/Config_Handlers/CIAOServerResources.hpp
	* DAnCE/Config_Handlers/Deployment.cpp
	* DAnCE/Config_Handlers/Deployment.hpp
	* DAnCE/Config_Handlers/ccd.cpp
	* DAnCE/Config_Handlers/ccd.hpp
	* DAnCE/Config_Handlers/cdd.cpp
	* DAnCE/Config_Handlers/cdd.hpp
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp
	* DAnCE/Config_Handlers/cid.cpp
	* DAnCE/Config_Handlers/cid.hpp
	* DAnCE/Config_Handlers/cpd.cpp
	* DAnCE/Config_Handlers/cpd.hpp
	* DAnCE/Config_Handlers/iad.cpp
	* DAnCE/Config_Handlers/iad.hpp
	* DAnCE/Config_Handlers/pcd.cpp
	* DAnCE/Config_Handlers/pcd.hpp
	* DAnCE/Config_Handlers/toplevel.cpp
	* DAnCE/Config_Handlers/toplevel.hpp

	Fixes a large number of compiler warnings in Borland. 

Thu Aug 25 15:26:25 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/ciao/ServerResources.idl: Added the missing <stacksize>
	  attribute to ORS_ThreadpoolWithLanes struct.  Thanks to Will
	  Otte for catching this.

Wed Aug 24 20:41:59 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecImplHeaderGenerator.cpp:
        * CIDLC/ExecImplSourceGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Removed commented-out code.

Tue Aug 23 20:09:59 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/Old_Config_Handlers/DT_Handler.h:
	* DAnCE/RTNodeApplication/RTServer_Impl.h:
	* DAnCE/ciao/Container_Base.h:
	* DAnCE/ciao/Context_Impl_Base.h:
	* DAnCE/ciao/NodeApplication_Impl.h:

	  Reordered include directives to make sure all necessary